fix bug where display would overflow if too many numbers were typed in

--- a/style.css
+++ b/style.css
@@ -58,6 +58,7 @@ body {
     background-color: #e1efe6;
     border-radius: 2rem;
     height: 4rem;
+    overflow: hidden;
 }
 
 .btn {
